fixes to nmea_data and simrad_calibration. Minor fix to EK80
Alex updated Echoview ECS cal parameter mappings so .ecs files are correctly read. Fixed issue in nmea_data where the type of the talker ID array would change when all data was removed causing it to fail when you then tried to add data back. Fixed minor issue computing the end of the NMEA async data window when writing raw data files.

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,6 @@ echolab2/processing/processed_data_MS2.py
 examples/plot_single_ping_ES60.py
 examples/not_updated/read_out.py
 test/ek80_z_offset_bug_test_2.py
+test/interleave_test.py
+test/loadfile.py
+test/vlw_from_idx_to_raw.py
